Do not depend on javax.xml.bind any longer